deploy/k3s/05-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: networcoid-worker
  namespace: networco-id
spec:
  replicas: 1
  selector:
    matchLabels:
      app: networcoid-worker
  template:
    metadata:
      labels:
        app: networcoid-worker
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: worker
        image: ghcr.io/networco/networco-id-worker:latest
