deploy/k3s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: networcoid-ingress
  namespace: networco-id
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  tls:
  - hosts:
    - id.networco.no
    secretName: id.networco.no-tls
  rules:
  - host: id.networco.no
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: networcoid
            port:
              number: 80
